--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            <div class="col-6">
             <form action="https://echo.htmkacademy.ru" method="POST" class="form-dtm">
             <label for="input-id" class="form-label h4 text-capitalize text-muted">to'plagan balingizni kiriting</label>
-            <input  max="100" name="form-ball" id="input-id" class="form-control mb-4 input-js">
+            <input  max="100" name="form-ball" id="input-id" class="form-control mb-4 input-js" autocomplete="off">
             
             <input type="checkbox" name="form_check" id="check-id" class="form-check-input check-js">
             <label for="check-id" class="form-check-label h6 text-capitalize text-muted">Imtiyoz asosida</label>
